# Prinny

./: .gitignore  AGENTIC_PLAN.md  CLAUDE.md  LICENSE  Makefile  PAPER_CHAT_AGENT.md  PROGRESS.md  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  run.sh  tailwind.config.js
app/: __init__.py  agent_skills.py  agentic_chat.py  agents.py  annotations.py  benchmark_agent.py  citations.py  cli.py  config.py  context.py  db.py  debt.py  discover.py  engine.py  export_dir.py  frontmatter.py  graph.py  i18n.py  library.py  live_session.py  llm.py  main.py  markdown.py  mcp_server.py  mcp_stdio.py  note_drafts.py  notes.py  notify.py  openreview.py  organizer.py  paper_chat.py  paper_finder.py  paper_summary.py  pdf_store.py  pdf_text.py  planner.py  provenance.py  repo.py  semantic_scholar.py  slugs.py  (+11 more)
scripts/: build_css.sh  gen_accent_css.py  vendor_assets.sh
static/: annotate.js  app.css  tw-accent.css
templates/: _agents_body.html  _chat.html  _chat_bubble.html  _chat_turn.html  _debt_panel.html  _drafts_review.html  _duplicates.html  _entity_detail.html  _experiment_detail.html  _export_result.html  _finding_review.html  _graveyard.html  _hypothesis_detail.html  _jump.html  _lint_panel.html  _paper_row.html  _planner_body.html  _proposed_panel.html  _reading_launcher.html  _regen_gate.html  _section_edit_diff.html  _settings_form.html  _skill_editor.html  _sync_panel.html  _tagbar.html  _tags_editor.html  _theme_detail.html  _thoughts_panel.html  _topic_reading_list.html  _triage_panel.html  _wiki_overview.html  _wiki_page_panel.html  _wiki_panel.html  _wiki_refresh_popup.html  agents.html  base.html  collection.html  index.html  notes.html  paper.html  (+12 more)
tests/: conftest.py  test_accent_css.py  test_agentic_chat_p6.py  test_agents.py  test_annotations.py  test_chat.py  test_debt_p7.py  test_engine_p3.py  test_frontmatter.py  test_gate_p2.py  test_graph.py  test_i18n.py  test_local_first.py  test_mcp_p4.py  test_merge.py  test_notes.py  test_organizer_p5.py  test_paper_chat_p8.py  test_paper_finder.py  test_paper_summary.py  test_planner.py  test_provenance_p1.py  test_semantic_scholar.py  test_theme.py  test_topic_view.py  test_topics.py  test_wiki.py  (+3 more)
(+36 files in other folders)
