[project]
name = "paper-agent"
version = "0.1.0"
description = "Prinny — personal research-wiki agent over Zotero collections; the wiki reflects the user's thinking, papers are evidence."
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "httpx",
    "python-multipart",
    "markdown-it-py",
    "pypdf",
]

[project.scripts]
paper-agent = "app.cli:main"

[project.optional-dependencies]
dev = ["pytest"]
# Manual real-Safari smoke test only (tests/manual/safari_smoke.py). Not an app
# or unit-test dependency — install with `pip install -e '.[safari]'` when you
# want to verify rendering in Safari.app via safaridriver/WebDriver.
safari = ["selenium"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# templates/ and static/ live at the repo root (resolved via BASE_DIR at runtime),
# so the supported install is an EDITABLE one from a clone — `pipx install
# --editable .` or `pip install -e .` — which runs from the source tree. A fully
# relocatable wheel would require moving those dirs under app/ (a follow-up).
packages = ["app"]
